# OpenGL

./: CMakeLists.txt  main.cpp  shaders.h  vertices.h
inc/: openglrenderer.h
